Fixed modal text spacing

--- a/frontend/src/components/universalModals/UserMenuModal.css
+++ b/frontend/src/components/universalModals/UserMenuModal.css
@@ -233,7 +233,7 @@ profile
 
 .cart-modal-header{
     font-family: var(--font-family-UMM);
-    padding-bottom:.3rem;
+    padding-bottom:.2rem;
 }
 
 .cart-modal-text{
